--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
-ceilometer (2013.1alerting2-1enovance1) UNRELEASED; urgency=low
+ceilometer (2013.1alerting3-1enovance1) stable; urgency=low
+
+  * Merge ceilometer alerting3
+
+ -- Mehdi Abaakouk <sileht@sileht.net>  Mon, 09 Sep 2013 10:47:23 +0200
+
+ceilometer (2013.1alerting2-1enovance1) unstable; urgency=low
 
   * Fix alarming to branch master (84b699d553a36cada7f00d846a31b4aa2e46ca9e)
 
  -- Mehdi Abaakouk <sileht@sileht.net>  Tue, 03 Sep 2013 14:53:47 +0200
 
-ceilometer (2013.1alerting1-1enovance1) sid; urgency=low
+ceilometer (2013.1alerting1-1enovance1) unstable; urgency=low
 
   * Merge alerting review 
 
